# yo-vino

./: .gitignore  .npmignore  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
app/: index.ts
app/languages/: rust.ts
app/providers/: acr.ts  registry.ts
app/utils/: shell.ts  timer.ts
etc/: .eslintrc.json  .prettierrc.json
generators/app/: formatter.d.ts  formatter.js  formatter.js.map  index.d.ts  index.js  index.js.map
generators/app/languages/: language.d.ts  language.js.map  rust.d.ts  rust.js  rust.js.map
generators/app/providers/: acr.d.ts  acr.js  acr.js.map  none.d.ts  none.js  none.js.map  registry.d.ts  registry.js.map
generators/app/utils/: errorable.d.ts  errorable.js  errorable.js.map  shell.d.ts  shell.js  shell.js.map  timer.d.ts  timer.js  timer.js.map
src/: index.ts
src/languages/: language.ts  rust.ts
src/providers/: none.ts
templates/rust/: Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
templates/rust/.github/workflows/: build.yml  release.azurecr.yml  release.nopublish.yml  release.yml
templates/rust/schemas/: my-component.widl
test/: index.test.ts  rust.test.ts
