[package]
name = "<%= module %>"
version = "0.0.0"
authors = ["<%= author %>"]
description = "<%= description %>"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["guest"]
guest = []

[dependencies]
wapc-guest = "0.4.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
serde_derive = "1.0.115"
serde_bytes = "0.11.5"
rmp-serde = "0.15.4"
lazy_static = "1.4.0"
vino-guest = { path = "../../vino-guest" }

[dev-dependencies]
structopt = "0.3.17"
base64 = "0.13.0"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
