[package]
name = "<%= module %>"
version = "0.0.0"
authors = ["<%= author %>"]
description = "<%= description %>"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["guest"]
guest = []

[dependencies]
wapc-guest = "0.4.0"
serde = { version="1.0.126", features=["derive"] }
lazy_static = "1.4.0"
vino-component = { path="../vino-component" }

[dev-dependencies]

[profile.release]
# Optimize for small code size
opt-level = "z"
lto = true
